validation/from-repo-constraint-template.yml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sexternaldatafromrepo
spec:
  crd:
    spec:
      names:
        kind: K8sExternalDatafromrepo
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sexternaldata

        violation[{"msg": msg}] {
          images := [img | img = input.review.object.spec.containers[_].image]

          response := external_data({"provider": "artifact-attestations-opa-provider", "keys": images})

          response_with_error(response)

          msg := sprintf("invalid response: %v", [response])
        }

        response_with_error(response) {
          count(response.errors) > 0
          errs := response.errors[_]
          contains(errs[1], "_unsigned")
        }

        response_with_error(response) {
          count(response.system_error) > 0
        }

        response_with_error(response) {
          not fromRepo(response, ["kommendorkapten/ghademo"])
        }

        fromRepo(resp, repos) {
          resp.responses[_][_][_].signature.certificate.githubWorkflowRepository == repos[_]
        }
