validation/from-repo-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sExternalDataFromRepo
metadata:
  name: require-build-provenance-from-repo
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Pod"]
    excludedNamespaces: ["provider-system"]
    namespaces: ["default"]
